fixed missaligned images

--- a/src/app/select-challenge-page/select-challenge-page.component.scss
+++ b/src/app/select-challenge-page/select-challenge-page.component.scss
@@ -58,6 +58,7 @@ $color-green-dark: #637454;
   border-radius: 10px;
   width: 112px;
   height: 88px;
+  margin: auto;
   align-items: center;
   /* justify-items: center; */
   display: flex;
